Bug 366507 - Once used one time Global Away button is never drawn again
Summary: Once used one time Global Away button is never drawn again
Status: RESOLVED FIXED
Alias: None
Product: konversation
Classification: Applications
Component: general (other bugs)
Version First Reported In: frameworks
Platform: openSUSE Linux
: NOR minor
Target Milestone: ---
Assignee: Konversation Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-08-08 05:29 UTC by Bruno Friedmann
Modified: 2016-09-09 20:04 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bruno Friedmann 2016-08-08 05:29:57 UTC
open konversation, you have a nice icon for the "Global Away" function.

click on it, wait a bit, you're now away with the corresponding icon.
Click again on it, the first visible button is not drawn you just get "Global Away" Text

Reproducible: Always



Expected Results:  
Icon on and off drawned
Comment 1 Peter Simonsson 2016-09-09 20:04:41 UTC
Git commit 8290920c2dd8134fddaafd223b2b99cf12b4b589 by Peter Simonsson.
Committed on 09/09/2016 at 20:04.
Pushed by psn into branch 'master'.

Fix global away icon

M  +2    -2    src/awaymanager.cpp

http://commits.kde.org/konversation/8290920c2dd8134fddaafd223b2b99cf12b4b589