Fix global away icon

BUG:366507